[package]
name = "scp-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
russh = "0.43.0"
russh-config = "0.7.1"
russh-keys = "0.43.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = "1.37.0"
